🔊 core: Clarify error message when system is not uniq.