@@ -65,9 +65,9 @@ public class ImplementationService<U> {
 		}
 		final List<SystemV3<U>> usys = sys.stream().filter(x -> x.getVimType().equals(vim.getVimType())).toList();
 		if (usys.size() != 1) {
-			throw new OrchestrationException("Unique system of " + vim.getVimId() + "/" + virtualTask.getType() + ", must be uniq but was " + usys.size() + "\n" + usys);
+			throw new OrchestrationException("Unique system of " + vim.getVimId() + "/" + virtualTask.getType().getSimpleName() + ", must be uniq but was " + usys.size() + "\n" + usys);
 		}
-		return usys.get(0).getImplementation(orchestrationServicev3, virtualTask, vim);
+		return usys.getFirst().getImplementation(orchestrationServicev3, virtualTask, vim);
 	}
 
 	private String buildKey(final VirtualTaskV3<U> virtualTask) {
